[package]
name = "dioxus-tabular"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[example]]
name = "simple"
required-features = ["dioxus/desktop", "dioxus/launch"]

[[example]]
name = "tasks"
required-features = ["dioxus/desktop", "dioxus/launch"]

[dependencies]
dioxus = { version = "0.6.3", default-features = false, features = [
  "hooks",
  "html",
  "macro",
  "signals",
] }
serde = { version = "1", optional = true }

[dev-dependencies]
futures = "0.3"
serde_json = "1"

[features]
default = []
export = ["dep:serde"]
