[package]
name = "dioxus-tabular"
version = "0.3.0"
edition = "2024"
description = "Type-safe and composable table framework for Dioxus"
documentation = "https://docs.rs/dioxus-tabular"
readme = "README.md"
homepage = "https://github.com/ryo33/dioxus-tabular"
repository = "https://github.com/ryo33/dioxus-tabular"
license = "MIT OR Apache-2.0"
keywords = ["dioxus", "reactive", "table"]
categories = ["gui"]

[[example]]
name = "simple"
required-features = ["dioxus/desktop", "dioxus/launch"]

[[example]]
name = "tasks"
required-features = ["dioxus/desktop", "dioxus/launch", "export"]

[[example]]
name = "export"
required-features = ["dioxus/desktop", "dioxus/launch", "export"]

[dependencies]
dioxus = { version = "0.7", default-features = false, features = [
  "hooks",
  "html",
  "macro",
  "signals",
] }
serde = { version = "1", optional = true }

[dev-dependencies]
futures = "0.3"
serde_json = "1"

[features]
default = []
export = ["dep:serde"]
